--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-      <h4>Ofertas Black Friday </h4>
+      <div id="ofertas"><h4>Ofertas Black Friday </h4></div>
         <nav id="navegacion">
           <ul>
             <li><h1 id="titulo">Tienda de ropa</h1></li>
